# mongo-mcp

./: .env.example  README.md  README_CN.md  README_EN.md  pyproject.toml
mongo_mcp/: config.py  server.py
mongo_mcp/tools/: document_tools.py
src/mongo_mcp/: config.py  db.py  server.py
src/mongo_mcp/tools/: __init__.py  admin_tools.py  aggregation_tools.py  database_tools.py  document_tools.py  index_tools.py
tests/: test_new_tools.py
