[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo-mcp"
version = "0.1.0"
description = "MCP service for MongoDB operations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.3.4",
    "pymongo>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.build.targets.wheel]
packages = ["mongo_mcp"] 